test/libsolidity/syntaxTests/storageLayoutSpecifier/precompiles.sol
contract A layout at addmod(1, 2, 3) {}
contract B layout at mulmod(3, 2, 1) {}
// ----
// UnimplementedFeatureError 1834: (0-39): Code generation is not supported for contracts with specified storage layout base.
